force-app/main/default/objects/ATM__c/fields/ATM_ID__c.field-meta.xml
<CustomField>
    <fullName>ATM_ID__c</fullName>
    <displayFormat>ATM-{0000}</displayFormat>
    <label>ATM ID</label>
    <type>AutoNumber</type>
</CustomField>