force-app/main/default/objects/ATM__c/fields/Cash_Available__c.field-meta.xml
<CustomField>
    <fullName>Cash_Available__c</fullName>
    <label>Cash Available</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>