force-app/main/default/objects/ATM__c/fields/Last_Refill_Date__c.field-meta.xml
<CustomField>
    <fullName>Last_Refill_Date__c</fullName>
    <label>Last Refill Date</label>
    <type>Date</type>
</CustomField>