force-app/main/default/objects/ATM__c/fields/Transaction_History__c.field-meta.xml
<CustomField>
    <fullName>Transaction_History__c</fullName>
    <label>Transaction History</label>
    <referenceTo>Transaction__c</referenceTo>
    <relationshipLabel>Transaction</relationshipLabel>
    <relationshipName>ATM_Transaction</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>